[package]
name = "traveling-trouserman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
dotenv = "0.15.0"
itertools = "0.11.0"
reqwest = { version = "0.11.20", features = ["rustls-tls", "blocking", "json"], default-features = false }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
